- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P2: Important
 - 
    6.6
 - 
    None
 
- 
        0d01b4718 (dev)
 
When doing row or column selection with colorStyle: Theme3D.ColorStyleRangeGradient, all the bars are highlighted with the item highlight color instead of only the selected one (if also Item selection is on).
- depends on
 - 
                    
QTBUG-112342 Bars3D crashes in selection if colorStyle is Theme3D.ColorStyleRangeGradient
-         
 - Closed
 
 -         
 
| For Gerrit Dashboard: QTBUG-112343 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 468792,3 | Fix row and column selection for range gradient | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |