Fix row and column selection for range gradient

Fixes: QTBUG-112343
Change-Id: I13acce222b2ad565245ac15e621a84e827e556f3
Reviewed-by: Dilek Akcay <dilek.akcay@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>